# agario

./: README.md  agarhs.cabal
app/: Main.hs
src/: AI.hs  Config.hs  Game.hs  Model.hs  Physics.hs  Player.hs
